--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import type { SignatureKind } from 'typescript';
+
+
 ---
 
 <Layout title="Ida sin kule nettside :D">
@@ -34,32 +37,16 @@ import Card from '../components/Card.astro';
 			</defs>
 		</svg>
 		<h1>Ida sin kule <span class="text-gradient">nettside</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
 		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Ida er kul!!!!"
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
+			{[...Array(24).keys()].map((_, index) => (
+				<Card
+				  href="/window"
+				  title={String(index + 1)}
+				  body="Åpnes snart..."
+				/>
+			  ))}
 		</ul>
+		
 	</main>
 </Layout>
 
